Stop intercom button overlapping map zoom
Fixes ushahidi/platform#1182

--- a/sass/overrides/_intercom.scss
+++ b/sass/overrides/_intercom.scss
@@ -1,3 +1,3 @@
 #intercom-container .intercom-launcher {
-	right: 60px;
+	right: 60px !important;
 }
